+Log de Sesiones de Usuario +COMPANY_LOGIN_BACKGROUND_URL +jpa countEntities bug fix +fix clippings ui

--- a/src/main/webapp/resources/go/panelClientesInvitados.xhtml
+++ b/src/main/webapp/resources/go/panelClientesInvitados.xhtml
@@ -16,6 +16,13 @@
     <cc:implementation>
         <p:panel id="panelclientesinvitados">
 
+            <div class="formSeparator">
+                <h2>Clientes Invitados
+                    <h:outputText value=" (Inscritos:#{casoScheduleController.event.data.scheduleEventClientList.size()}/#{casoScheduleController.event.data.maxClientesInscritos})"
+                                  rendered="#{casoScheduleController.event.data.publicEvent and not empty casoScheduleController.event.data.maxClientesInscritos}"/>
+                </h2>
+            </div>  
+
 
             <p:autoComplete id="clientesinvitados" value="#{casoScheduleController.selectedClientToAddInvited}" 
                             autocomplete="false" dropdown="true" queryDelay="800" forceSelection="true"
