--- a/src/main/webapp/resources/go/panelUsuariosInvitados.xhtml
+++ b/src/main/webapp/resources/go/panelUsuariosInvitados.xhtml
@@ -14,6 +14,10 @@
     <!-- IMPLEMENTATION -->
     <cc:implementation>
         <p:panel id="panelUsuarios">
+            
+             <div class="formSeparator">
+                                                    <h2>Usuarios Invitados</h2>
+                                                </div>  
 
             <p:autoComplete id="invitados" value="#{casoScheduleController.selectedUserToAddInvited}" 
                             autocomplete="false" dropdown="true" queryDelay="800" forceSelection="true"
