--- a/src/main/webapp/public/inscripcion_evento.xhtml
+++ b/src/main/webapp/public/inscripcion_evento.xhtml
@@ -89,7 +89,7 @@
                 </h:panelGrid>
                 <div align="right">
                     <p:commandButton immediate="true" 
-                                     onclick="PF('messagesDialog').hide();" update=":mainForm"
+                                     onclick="PF('messagesDialog').hide();" update=":mainForm :form_:horario"
                                      type="button" value="OK"/>
                 </div>  
 
