--- a/src/main/webapp/public/inscripcion_evento.xhtml
+++ b/src/main/webapp/public/inscripcion_evento.xhtml
@@ -115,7 +115,6 @@
 
                 <div class="field">
                     <h:inputText id="Email" value="#{inscripcionEventosSessionBean.datos.email}" 
-                                 disabled="#{empty cuposHorarioBean.entries}"
                                  styleClass="form-control"
                                  validator="#{inputValidationBean.validarEmail}"
                                  required="true" requiredMessage="Debes escribir tu email correctamente."/>
@@ -123,7 +122,7 @@
                 </div>
 
                 <div class="field">
-                    <h:inputText id="Telefono" value="#{inscripcionEventosSessionBean.datos.telefono}" disabled="#{empty cuposHorarioBean.entries}" 
+                    <h:inputText id="Telefono" value="#{inscripcionEventosSessionBean.datos.telefono}"  
                                  validator="#{inputValidationBean.validatePhoneNumber}" 
                                  styleClass="form-control"/>
                     <p:watermark for="Telefono" value="Ej: fijo 2 2 1234567 o movil 9 12345678"/>
