CKEditor images upload

--- a/src/main/webapp/script/index.xhtml
+++ b/src/main/webapp/script/index.xhtml
@@ -27,6 +27,7 @@
                 function start() {
                     PF('excelStatusDialog').show();
                 }
+                window.parent.CKEDITOR.tools.callFunction(1,'','');
 
                 function stop() {
                     PF('excelStatusDialog').hide();
